@@ -2,6 +2,8 @@ package com.softjourn.eris.contract.types;
 
 import junit.framework.TestCase;
 
+import java.math.BigInteger;
+
 public class UintTest extends TestCase {
 
     Uint uint = new Uint();
@@ -21,15 +23,15 @@ public class UintTest extends TestCase {
 
     public void testFormatInput() throws Exception {
 
-        assertEquals("0000000000000000000000000000000000000000000000000000000000000005", uint.formatInput(5L));
-        assertEquals("000000000000000000000000000000000000000000000000000000000000000A", uint.formatInput(10L));
-        assertEquals("0000000000000000000000000000000000000000000000000000000000000100", uint.formatInput(256L));
+        assertEquals("0000000000000000000000000000000000000000000000000000000000000005", uint.formatInput(BigInteger.valueOf(5L)));
+        assertEquals("000000000000000000000000000000000000000000000000000000000000000A", uint.formatInput(BigInteger.valueOf(10L)));
+        assertEquals("0000000000000000000000000000000000000000000000000000000000000100", uint.formatInput(BigInteger.valueOf(256L)));
     }
 
     public void testFormatOutput() throws Exception {
-        assertEquals(new Long(5L), uint.formatOutput("0000000000000000000000000000000000000000000000000000000000000005"));
-        assertEquals(new Long(10L), uint.formatOutput("000000000000000000000000000000000000000000000000000000000000000A"));
-        assertEquals(new Long(256L), uint.formatOutput("0000000000000000000000000000000000000000000000000000000000000100"));
+        assertEquals(BigInteger.valueOf(5L), uint.formatOutput("0000000000000000000000000000000000000000000000000000000000000005"));
+        assertEquals(BigInteger.valueOf(10L), uint.formatOutput("000000000000000000000000000000000000000000000000000000000000000A"));
+        assertEquals(BigInteger.valueOf(256L), uint.formatOutput("0000000000000000000000000000000000000000000000000000000000000100"));
     }
 
     public void testCanRepresent() throws Exception {
